# fprime-bootstrap

./: .gitignore  .pre-commit-config.yaml  NOTICE.txt  README.md  pyproject.toml
.github/workflows/: codeql-security-scan.yml  format.yml  publish.yml  test-clone-command.yml  test-project-command.yml
src/fprime_bootstrap/: __main__.py  bootstrap_project.py  clone_project.py  common.py
src/fprime_bootstrap/cookiecutter_templates/cookiecutter-fprime-project/hooks/: post_gen_project.py  pre_gen_project.py
src/fprime_bootstrap/cookiecutter_templates/cookiecutter-fprime-project/{{cookiecutter.project_name}}/: CMakeLists.txt
src/fprime_bootstrap/templates/fprime-project-template/: CMakeLists.txt-template  CMakePresets.json  README.md  README.md-template
